dnl ************************************************************************
dnl
dnl This file is part of the Cal3D library/package
dnl Copyright (C) 2002 Bruno 'Beosil' Heidelberger (beosil@swileys.com)
dnl Copyright (C) 2006 Loic Dachary <loic@dachary.org>
dnl
dnl This library is free software; you can redistribute it and/or modify it
dnl under the terms of the GNU Lesser General Public License as published by
dnl the Free Software Foundation; either version 2.1 of the License, or (at
dnl your option) any later version.
dnl
dnl ************************************************************************

AC_INIT(src/cal3d/cal3d.h)

AM_CONFIG_HEADER(config.h)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(cal3d,0.12.0)

AC_ARG_WITH(cxx,[  --with-cxx=CXX          force the use of a particular C++ compiler ],
[
  CXX="$withval"
],)

AC_ARG_WITH(cc,[  --with-cc=CC            force the use of a particular C compiler ],
[
  CC="$withval"
],)


dnl ************************************************************************

CAL3D_CHECK_USER_CXX_FLAGS

dnl ************************************************************************

AC_PROG_CXX

AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

AC_PROG_INSTALL

CPPFLAGS="$CPPFLAGS"' -I${top_srcdir}/src'

dnl ************************************************************************

CAL3D_CHECK_BUILD

dnl ************************************************************************

AC_OUTPUT(Makefile src/Makefile src/cal3d/Makefile cal3d.pc fileformats.txt)

dnl ************************************************************************

echo "o-----------------------------------------------------------o"
echo "| To build and install the Cal3D library type...            |"
echo "|     make; make install                                    |"
echo "o-----------------------------------------------------------o"

dnl ************************************************************************

